2005-10-26  Andrew Cagney  <cagney@redhat.com>

	* Task.java: Delete .syscallEvent.  Add .notifySyscallXXX.
	* TaskEvent.java: Delete .Syscall.
	* TaskObserver.java: Add Syscall .updateSyscallXXX.
	* TestI386Regs.java: Add .updateSyscallXXX, .updateSyscallEnter,
	.updateSyscallExit, .added, and .deleted, to .TaskEventObserver.
	* TestI386Modify.java: Ditto.
	* TestSyscall2.java: Ditto.
	* TestSyscall.java: Ditto.
	* TestSyscallOpen.java: Ditto.
	* TaskState.java: Replace Task .syscallEvent with
	.notifySyscallXXX.
	
	* Task.java: Add .notifySyscall, .requestAddSyscallObserver,
	.requestDeleteSyscallObserver, and .syscallObservers.
	* TaskObserver.java: Simplify .Syscall interface.

2005-10-25  Andrew Cagney  <cagney@redhat.com>

	* TestTaskTerminateObserver.java: Enable all tests.
	
	* TaskObservable.java: New file.
	* TestTaskTerminateObserver.java, TestTaskForkedObserver.java,
	TestTaskClonedObserver.java, TestProcGet.java, TestModify.java:
	Update.
	* TestLib.java: Make .TaskObserverBase abstract adding .updateTask
	method; have it register itself as a task-added observer.  Delete
	AddTaskObserver.
	* TaskState.java: Update .processRequestAddObserver, and
	.processRequestDeleteObserver to take a TaskObservable.
	* Task.java: Add .clonedObservers, .requestAddClonedObserver,
	requestDeleteClonedObserver, .attachedObservers,
	.requestAddAttachedObserver, .requestDeleteAttachedObserver,
	.forkedObservers, .requestAddForkedObserver,
	.requestDeleteForkedObserver, .terminatedObservers,
	.requestAddTerminatedObserver, .requestDeleteTerminatedObserver,
	.terminatingObservers, .requestAddTerminatingObserver,
	.requestDeleteTerminatingObserver, .execedObservers,
	.requestAddExecedObserver, .requestDeleteExecedObserver.  Make
	.requestAddObserver, and .requestDeleteObserver private.

2005-10-24  Andrew Cagney  <cagney@redhat.com>

	* TestTaskTerminateObserver.java: New.
	* TestExiting.java: Delete.
	* TestTerminated.java: Delete.
