@@ -85,104 +85,6 @@ public abstract class TaskEvent
     }
 
     /**
-     * This task has forked, creating a new child process and task.
-     */
-    static class Execed
-	extends TaskEvent
-    {
-	Execed (Task task)
-	{
-	    super (task);
-	}
-	public void execute ()
-	{
-	    throw new RuntimeException ("should not happen");
-	}
-	public String toString ()
-	{
-	    return ("[Execed" + super.toString ()
-		    + "]");
-	}
-    }
-
-    /**
-     * The task has exited (no more process)
-     */
-    static class Exited
-	extends TaskEvent
-    {
-	protected int status;
-	Exited (Task task, int status)
-	{
-	    super (task);
-	    this.status = status;
-	}
-	public int getStatus ()
-	{
-	    return status;
-	}
-	public void execute ()
-	{
-	    throw new RuntimeException ("should not happen");
-	}
-	public String toString ()
-	{
-	    return ("[Exited" + super.toString ()
-		    + ",status=" + status
-		    + "]");
-	}
-    }
-
-    /**
-     * The task is exiting.
-     */
-    static class Exiting
-	extends TaskEvent
-    {
-	protected int signal;
-	Exiting (Task task, int signal)
-	{
-	    super (task);
-	    this.signal = signal;
-	}
-	public int getSignal ()
-	{
-	    return signal;
-	}
-	public void execute ()
-	{
-	    throw new RuntimeException ("should not happen");
-	}
-	public String toString ()
-	{
-	    return ("[Exiting" + super.toString ()
-		    + ",signal=" + signal
-		    + "]");
-	}
-    }
-
-    /**
-     * This task has terminated and is in a zombie state.
-     */
-    static class Zombied
-	extends TaskEvent
-    {
-	Zombied (Task task)
-	{
-	    super (task);
-	}
-	public void execute ()
-	{
-	    throw new RuntimeException ("should not happen");
-	}
-	public String toString ()
-	{
-	    return ("[Zombied" + super.toString ()
-		    + "]");
-	}
-    }
-
-    /**
      * The TASK is about to receive a SIGNAL.
      */
     static class Signaled
